Issue Fixed: UI alignment disturbed in Export light box, Tab height and Test wizard label in  evalu8 is not as per specifications given

--- a/WebContent/styles/new-ui.css
+++ b/WebContent/styles/new-ui.css
@@ -409,7 +409,7 @@ span.glyphicon.glyphicon-info-sign {
 }
 .nav-tabs.resources-tabs {
   border-bottom: 1px solid #ddd;
-  height: 45px;
+  height: 36px;
 }
 .restoreicon.fa-arrow-up {
   top: 5px;
